[package]
name = "pviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "*"
egui_extras = { version = "*", features = ["default", "all_loaders"] }
image = { version = "*", features = ["jpeg", "png"] }
env_logger = "0.10"
rfd = "*"
tokio = { version = "*", features = ["rt-multi-thread", "time" ] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
